--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "gh-pages": "^6.3.0",
+    "ra-data-simple-rest": "^5.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
