--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "gh-pages": "^6.3.0",
     "ra-data-simple-rest": "^5.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1",
+    "react-router": "^6.15.0",
+    "react-router-dom": "^6.15.0",
     "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
