--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@mui/material": "^6.3.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "gh-pages": "^6.3.0",
     "ra-data-simple-rest": "^5.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "sweetalert2": "^11.15.10"
