--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "gh-pages": "^6.3.0",
     "hover.css": "^2.3.2",
+    "mitt": "^3.0.1",
     "ra-data-simple-rest": "^5.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
